maxon-bin/specs/fragments/duplicate-block-identifiers.doc-example-3.1.test
// Test: duplicate-block-identifiers.doc-example-3.1
function main() returns int
    var x = 0
    if true 'check'
        x = 1
    end 'check'
    while false 'check'
        x = 2
    end 'check'
    return x
end 'main'
---
MaxoncStderr: ```
Semantic Error: temp_fragment.maxon:7:5
Duplicate block identifier 'check' in nested blocks

  7 |     while false 'check'
    |     ^
```
---
// IR: N/A (compiler error test)
---
